--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@ google_analytics:
 disqus_shortname:
 
 # Build settings
-markdown:     redcarpet
+# markdown:     redcarpet
+markdown:     kramdown
 redcarpet:
   extensions: ['smart', 'tables', 'with_toc_data']
 permalink:    pretty
